CHATS_SIT/force-app/main/default/objects/T_Missing_Information_tracker__c.object
<CustomObject>
    <label>Missing Information tracker</label>
    <nameField>
        <displayFormat>MI-{00000000}</displayFormat>
        <label>Missing Information tracker Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Missing Information trackers</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>dte_prntd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Printed</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>dte_reqstd__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>idn_case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case ID</label>
        <referenceTo>T_SBSD_CASE__c</referenceTo>
        <relationshipLabel>Missing Information trackers</relationshipLabel>
        <relationshipName>Missing_Information_trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>idn_corr_nam__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Correspondence Id</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>idn_user_reqstd__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Requested</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Missing_Information_trackers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Suppressed__c</fullName>
        <label>Suppressed</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Missing_Verifications__c</fullName>
        <label>Missing Verifications</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Checklist_CR107</valueSetName>
        </valueSet>
    </fields>
</CustomObject>